--- a/CyberUtsav-2024/Registration.css
+++ b/CyberUtsav-2024/Registration.css
@@ -8,7 +8,6 @@ body {
   font-family: Arial, sans-serif;
   background: color(135deg, rgb(25, 254, 255));
   background-size: 400% 400%;
-  animation: gradient 12s ease infinite;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,4 +34,54 @@ body {
   .landing-page p {
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
+  }
+  .container {
+    padding: 15px 20px;
+    font-size: 1.1rem;
+    margin: 8px;
+    background-color: #4a4a4a;
+    color: rgb(104, 210, 255);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  input[type="text"] {
+    width: 95%;                
+    max-width: 200px;          
+    padding: 12px 16px;
+    font-size: 14px;
+    border: 1px solid #72dcff;    
+    border-radius: 6px;        
+    box-sizing: border-box;
+    background-color: aliceblue; 
+  }
+  
+  input[type="text"]:focus {
+    border-color: #68c8ff;  
+    outline: none; 
+    box-shadow: 0 0 5px rgba(92, 206, 255, 0.461);
+  }
+ label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  .register-btn {
+    padding: 15px 20px;
+    font-size: 1.1rem;
+    margin: 8px;
+    background-color: #4a4a4a;
+    color: rgb(104, 210, 255);
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+  }
+  .register-btn:hover {
+    transform: scale(1.1);
+    background-color: rgb(233, 132, 206);
+    color: #333;
   }
