--- a/CyberUtsav-2024/style.css
+++ b/CyberUtsav-2024/style.css
@@ -115,7 +115,7 @@
     transition: all 0.5s ease;
   }
   .feedback.correct {
-    color: #4caf50;
+    color: #51b855;
   }
   .feedback.incorrect {
     color: #f44336;
@@ -183,4 +183,18 @@
     .category-btn, .choices-container button {
       font-size: 0.9rem;
     }
+  }
+  .restart-btn {
+    padding: 10px 20px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+    border: none;
+    background-color: #4CAF50; 
+    color: white; 
+    border-radius: 5px; 
+    transition: background-color 0.3s ease; 
+  }
+  .restart-btn:hover {
+    background-color: #45a049; 
   }
