--- a/CyberUtsav-2024/Registration.css
+++ b/CyberUtsav-2024/Registration.css
@@ -89,3 +89,11 @@ body {
     color: rgb(125, 212, 255); 
     text-decoration: azure;
 }
+body {
+  background-image: url('Free\ Vector\ _\ Quiz\ background\ with\ flat\ objects.jpeg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center center; 
+  height: 100vh; 
+  margin: 0;
+}
